# gridmd

./: .gitignore  INTEROP.md  PLAN.md  README.md
.github/workflows/: ci.yml
conformance/fixtures-xlsx/: quarterly-report.xlsx
go/: go.mod
go/internal/refs/: refs.go
js/: .gitignore  README.md  bunfig.toml  package.json  tsconfig.json
js/scripts/: build.ts
js/src/: calc.ts  dump.ts  index.ts  parser.ts  refs.ts  scalar.ts  types.ts  validate.ts  xml.ts
js/src/xlsx/: chart.js  chart.ts  chartex.js  chartex.ts  drawing.js  drawing.ts  model.ts  pivot.ts  read-objects.js  read-objects.ts  read.js  read.ts  styles.ts  units.ts  write.js  write.ts  zip.ts
js/test/: calc.test.ts  chartex.test.js  chartex.test.ts  coverage-core.test.ts  coverage-edges.test.ts  coverage-extra.test.ts  coverage-final.test.ts  coverage-final2.test.ts  coverage-final3.test.ts  coverage-final4.test.ts  coverage-final5.test.ts  coverage-xlsx.test.ts  example.test.ts  parser.test.ts  roundtrip.test.ts  scalar.test.ts  validate.test.ts  xlsx.test.ts
rust/: Cargo.toml
rust/src/: main.rs
rust/tests/: conformance.rs
